# trim_isoseq_polyA

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
include/: meson.build
include/pacbio/trima/: char_traits.hpp
src/: CMakeLists.txt  hmm_model.cpp  main.cpp  meson.build  polyA_hmm_model.cpp
subprojects/: libbz2.wrap
tests/: meson.build
tests/src/: TestData.h.in  fasta_test.cpp  fastq_test.cpp  hmm_model_test.cpp  matrix_test.cpp  meson.build  polyA_HMM_test.cpp  sequence_test.cpp
